refactor: improve desanitization boundary